--- a/HTML･CSS課題.css
+++ b/HTML･CSS課題.css
@@ -67,6 +67,11 @@ footer {
 
 @media screen and (max-width: 768px){
 
+  body {
+
+    margin: 0 auto;
+  }
+
   main{
     width: 100%;
     margin: 50px 20px 50px 20px;
